--- a/index.html
+++ b/index.html
@@ -6,10 +6,37 @@
   <meta name="viewport" content="width=device-width">
   <title>ADD TITLE</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+  <!--FONTS-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
 	
 </head>
 
 <body>
+
+  <div class="w3-container w3-margin w3-border w3-padding-64 header">
+    <header class="w3-border w3-margin">
+      <h1>The Music Room</h1>
+      <h2>Experience an Immersive Music <br> Room to be Blown Away</h2>
+    </header> 
+  </div>
+
+  <section class="w3-container w3-margin w3-row w3-border images">
+    <div class="w3-container w3-border w3-col w3-center l4 m4 s4">
+      <img src="/images/piano.png" alt="piano" style="width:50%">
+    </div>
+
+    <div class="w3-container w3-margin w3-border w3-col w3-center l4 m4 s4">
+      <img src="/images/guitar.png" alt="guitar" style="width:50%">
+    </div>
+
+    <div class="w3-container w3-border w3-col w3-center l4 m4 s4">
+      <img src="/images/drums.png" alt="drums" style="width:50%">
+    </div>
+  </section>
 
 
   
