--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
   </section>
 
 
+
+  <section class="w3-container w3-margin w3-row w3-border images">
+    <div class="w3-container w3-border w3-col w3-center l4 m4 s4">
+      <img src="/images/piano.png" alt="piano" style="width:50%">
+    </div>
+
+    <div class="w3-container w3-margin w3-border w3-col w3-center l4 m4 s4">
+      <img src="/images/guitar.png" alt="guitar" style="width:50%">
+    </div>
+
+    <div class="w3-container w3-border w3-col w3-center l4 m4 s4">
+      <img src="/images/drums.png" alt="drums" style="width:50%">
+    </div>
+  </section>
+
+
   
 </body>
 
