--- a/instructions.html
+++ b/instructions.html
@@ -17,6 +17,13 @@
 
 <body>
 
+  <div class="w3-container w3-margin w3-border w3-padding-64 header">
+    <header class="w3-border w3-margin">
+      <h1>The Music Room</h1>
+      <h2>Instructions</h2>
+    </header> 
+    
+  </div>
 
   
 </body>
