Start of week 15/05

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
     </header> 
   </div>
 
-  <section class=" w3-row w3-border images">
+  <nav class="w3-container w3-border">
+    <button onclick="window.location.href = 'instructions.html'" class="w3-button w3-black w3-round">Instructions</button>
+  </nav>
+
+  <section class="w3-row w3-border images">
     <div class="box piano w3-col w3-center l4 m4 s12">
       <img class="piano_img" src="/images/piano.png" alt="piano">
     </div>
