I have my first vr button working

--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
 
 <body>
 
-  <div class="w3-container w3-margin w3-border w3-padding-64 header">
-    <header class="w3-border w3-margin">
+  <div class="w3-container w3-row w3-margin w3-border w3-padding-64 header">
+    <header class="w3-col l7 m7 s7 w3-border w3-margin">
       <h1>The Music Room</h1>
       <h2>Experience an Immersive Music <br> Room to be Blown Away</h2>
     </header> 
+
+    <nav class="w3-col l4 m4 s4 w3-center">
+     <button onclick="window.location.href = 'vr.html'" class="enter w3-round"> <h2 class="center">Enter VR <br> World</h2> </button>
+
+      <!--<button onclick="window.location.href = 'instructions.html'" class="enter w3-center w3-padding-64 w3-round"><h2 class="center">Instructions</h2></button>-->
+    </nav>
   </div>
 
-  <nav class="w3-container w3-border">
-    <button onclick="window.location.href = 'instructions.html'" class="w3-button w3-black w3-round">Instructions</button>
-  </nav>
 
   <section class="w3-row w3-border images">
     <div class="box piano w3-col w3-center l4 m4 s12">
