--- a/index.html
+++ b/index.html
@@ -17,30 +17,30 @@
 
 <body>
 
-  <div class="w3-container w3-row w3-margin w3-border w3-padding-64 header">
+  <div class="w3-container w3-row w3-margin w3-border w3-padding-64 w3-border w3-border-black header">
     <header class="w3-col l7 m7 s7 w3-border w3-margin">
       <h1>The Music Room</h1>
       <h2>Experience an Immersive Music <br> Room to be Blown Away</h2>
     </header> 
 
     <nav class="w3-col l4 m4 s4 w3-center">
-     <button onclick="window.location.href = 'vr.html'" class="enter w3-round"> <h2 class="center">Enter VR <br> World</h2> </button>
-
-      <!--<button onclick="window.location.href = 'instructions.html'" class="enter w3-center w3-padding-64 w3-round"><h2 class="center">Instructions</h2></button>-->
+      <button onclick="window.location.href = 'vr.html'" class="enter w3-round"> <h2 class="center">Enter VR <br> World</h2> </button>
+    
+      <button onclick="window.location.href = 'instructions.html'" class="infobtn w3-round"> <h2 class="center">Instructions</h2> </button>
     </nav>
   </div>
 
 
-  <section class="w3-row w3-border images">
-    <div class="box piano w3-col w3-center l4 m4 s12">
+  <section class="w3-row w3-border w3-border w3-border-black images">
+    <div class="box piano w3-col w3-center w3-border w3-border-black l4 m4 s12">
       <img class="piano_img" src="/images/piano.png" alt="piano">
     </div>
 
-    <div class="box guitar w3-col w3-center l4 m4 s12">
+    <div class="box guitar w3-col w3-center w3-border w3-border-black l4 m4 s12">
       <img class="guitar_img" src="/images/guitar.png" alt="electric guitar">
     </div>
 
-    <div class="box drums w3-col w3-center l4 m4 s12">
+    <div class="box drums w3-col w3-center w3-border w3-border-black l4 m4 s12">
       <img class="drums_img" src="/images/drums.png" alt="drums">
     </div>
   </section>
