--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <body>
 
-  <div class="w3-container w3-row w3-margin w3-border w3-padding-64 w3-border w3-border-black header">
-    <header class="w3-col l7 m7 s7 w3-border w3-margin">
+  <div class="w3-container w3-row w3-margin w3-padding-64 w3-border w3-border-black header">
+    <header class="w3-col l7 m7 s7 w3-margin">
       <h1>The Music Room</h1>
       <h2>Experience an Immersive Music <br> Room to be Blown Away</h2>
     </header> 
