--- a/instructions.html
+++ b/instructions.html
@@ -17,29 +17,28 @@
 
 <body>
 
-  <div class="w3-container w3-margin w3-border w3-padding-64 header">
-    <header class="w3-border w3-margin">
+  <div class="w3-container w3-row w3-margin w3-padding-64 w3-border w3-border-black header">
+    <header class="w3-col l7 m7 s7 w3-margin">
       <h1>The Music Room</h1>
-      <h2>Instructions</h2>
+      <h2>Instructions</h2> <img class="info.png" src="/images/info.png" alt="information icon">
     </header> 
+
+    <nav class="w3-col l4 m4 s4 w3-center">
+      <button onclick="window.location.href = 'vr.html'" class="enter w3-round"> <h2 class="center">Enter VR <br> World</h2> </button>
+    </nav>
   </div>
 
 
-  <nav class="w3-container w3-border">
-    <button onclick="window.location.href = 'index.html'" class="w3-button w3-black w3-round">Home</button>
-  </nav>
-
-
-  <section class="w3-row w3-border images">
-    <div class="box piano w3-col w3-center l4 m4 s12">
+  <section class="w3-row w3-border w3-border w3-border-black images">
+    <div class="box piano w3-col w3-center w3-padding w3-border w3-border-black l4 m4 s12">
       <h2>Click and hold and move your mouse side to side to turn around. <br> Move your mouse up and down to look up or down.</h2>
     </div>
 
-    <div class="box guitar w3-col w3-center l4 m4 s12">
+    <div class="box guitar w3-col w3-center w3-padding w3-border w3-border-black l4 m4 s12">
       <h2>Use your WASD keys or arrow keys to move around. </h2>
     </div>
 
-    <div class="box drums w3-col w3-center l4 m4 s12">
+    <div class="box drums w3-col w3-center w3-padding w3-border w3-border-black l4 m4 s12">
       <h2>Click on an instrument of your choice to see more information about it!</h2>
     </div>
   </section>
