--- a/instructions.html
+++ b/instructions.html
@@ -20,7 +20,7 @@
   <div class="w3-container w3-row w3-margin w3-padding-64 w3-border w3-border-black header">
     <header class="w3-col l7 m7 s7 w3-margin">
       <h1>The Music Room</h1>
-      <h2>Instructions</h2> <img class="info.png" src="/images/info.png" alt="information icon">
+      <h2>Instructions</h2> <img class="info_img" src="/images/info.png" alt="information icon">
     </header> 
 
     <nav class="w3-col l4 m4 s4 w3-center">
