--- a/vr.html
+++ b/vr.html
@@ -46,39 +46,45 @@
 
 
   <!-- FLOOR -->
-    <a-plane id="floor" color="#4a2d26" position="0 -1 0" rotation="-90 0 0" scale="30 30 30"></a-plane>
+  <a-plane id="mainfloor" color="#4a2d26" position="0 -1 0" rotation="-90 0 0" scale="15 15 15"></a-plane>
+
+  <a-plane id="stringfloor" color="#4a2d26" position="10 -1 0" rotation="-90 0 0" scale="15 15 15"></a-plane>
+
+  <a-plane id="brindfloor" color="#4a2d26" position="-10 -1 0" rotation="-90 0 0" scale="15 15 15"></a-plane>
+
+  <a-plane id="percussionfloor" color="#4a2d26" position="0 -1 -10" rotation="-90 0 0" scale="15 15 15"></a-plane>
   
 
   <!--WALLS-->
-  <a-box id="leftwall" color="#b8cbde" scale="0.5 10 30" position="-15 0 0"></a-box>
+  <a-box id="leftwall" color="#b8cbde" scale="0.5 10 15" position="-7.5 0 0"></a-box>
 
-  <a-box id="rightwall" color="#b8cbde" scale="0.5 10 30" position="15 0 0"></a-box>
+  <a-box id="rightwall" color="#b8cbde" scale="0.5 10 15" position="7.5 0 0"></a-box>
 
-  <a-box id="backwall" color="#b8cbde" scale="0.5 10 30" position="0 0 -15" rotation="0 90 0"></a-box>
+  <a-box id="backwall" color="#b8cbde" scale="0.5 10 15" position="0 0 -7.5" rotation="0 90 0"></a-box>
 
-  <a-box id="frontwall" color="#b8cbde" scale="0.5 10 30" position="0 0 15" rotation="0 90 0"></a-box>
+  <a-box id="frontwall" color="#b8cbde" scale="0.5 10 15" position="0 0 7.5" rotation="0 90 0"></a-box>
 
 
   <!-- 3D MODELS -->
-  <a-entity gltf-model="#bongos" position="0 -1 0" scale='0.25 0.25 0.25'></a-entity>
+  <a-entity gltf-model="#bongos" position="0 -1 4" scale='0.25 0.25 0.25'></a-entity>
 
-  <a-entity gltf-model="#cello" position="1 -1 2" scale='0.25 0.25 0.25'></a-entity>
+  <a-entity gltf-model="#cello" position="-5 1.3 -5" scale='2.25 2.25 2.25' rotation="70 0 0"></a-entity>
 
-  <a-entity gltf-model="#drum" position="2 -2 -1" scale='0.25 0.25 0.25'></a-entity>
+  <a-entity gltf-model="#drum" position="3 -3.614 -3" scale='0.25 0.25 0.25'></a-entity>
 
-  <a-entity gltf-model="#flute" position="-2 -1 -2" scale='0.25 0.25 0.25'></a-entity>
+  <a-entity gltf-model="#flute" position="-2 0.109 -2" scale='0.25 0.25 0.25' rotation="0 45 45"></a-entity>
 
-  <a-entity gltf-model="#guitar" position="-3 -1 2" scale='0.25 0.25 0.25'></a-entity>
+  <a-entity gltf-model="#guitar" position="-4.5 -0.963 -5" scale='0.3 0.3 0.3'></a-entity>
 
-  <a-entity gltf-model="#piano" position="10 -1 5" scale='0.25 0.25 0.25'></a-entity>
+  <a-entity gltf-model="#piano" position="-6 -0.830 1.5" scale='3 3 3'></a-entity>
 
-  <a-entity gltf-model="#sax" position="-10 -1 -5" scale='0.25 0.25 0.25'></a-entity>
+  <a-entity gltf-model="#sax" position="-4 1.5 -5" scale='0.01 0.01 0.01'></a-entity>
 
-  <a-entity gltf-model="#trumpet" position="-7 -1 5" scale='0.1 0.1 0.1'></a-entity>
+  <a-entity gltf-model="#trumpet" position="-6 0.5 5" scale='0.1 0.1 0.1'></a-entity>
 
-  <a-entity gltf-model="#violin" position="5 -1 -10" scale='0.25 0.25 0.25'></a-entity>
+  <a-entity gltf-model="#violin" position="5 -1 -6" scale='0.05 0.05 0.05'></a-entity>
 
-  <a-entity gltf-model="#xylophone" position="-5 -1 10" scale='0.25 0.25 0.25'></a-entity>
+  <a-entity gltf-model="#xylophone" position="-5 -1 6" scale='0.02 0.02 0.02'></a-entity>
 
   
 </a-scene>
