--- a/instructions.html
+++ b/instructions.html
@@ -20,7 +20,8 @@
   <div class="w3-container w3-row w3-margin w3-padding-64 w3-border w3-border-black header">
     <header class="w3-col l7 m7 s7 w3-margin">
       <h1>The Music Room</h1>
-      <h2>Instructions</h2> <img class="info_img" src="/images/info.png" alt="information icon">
+      <h2>Instructions</h2> 
+      <!--<img class="info_img" src="/images/info.png" alt="information icon">-->
     </header> 
 
     <nav class="w3-col l4 m4 s4 w3-center">
@@ -31,14 +32,18 @@
 
   <section class="w3-row w3-border w3-border w3-border-black images">
     <div class="box piano w3-col w3-center w3-padding w3-border w3-border-black l4 m4 s12">
+      <img class="sidemouse_img" src="/images/sidemouse.png" alt="side to side">
+      <img class="updownmouse_img" src="/images/updownmouse.png" alt="up and down">
       <h2>Click and hold and move your mouse side to side to turn around. <br> Move your mouse up and down to look up or down.</h2>
     </div>
 
     <div class="box guitar w3-col w3-center w3-padding w3-border w3-border-black l4 m4 s12">
+      <img class="keys_img" src="/images/keys.png" alt="keys">
       <h2>Use your WASD keys or arrow keys to move around. </h2>
     </div>
 
     <div class="box drums w3-col w3-center w3-padding w3-border w3-border-black l4 m4 s12">
+      <img class="cursor_img" src="/images/cursor.png" alt="cursor">
       <h2>Click on an instrument of your choice to see more information about it!</h2>
     </div>
   </section>
