--- a/vr.html
+++ b/vr.html
@@ -46,45 +46,58 @@
 
 
   <!-- FLOOR -->
-  <a-plane id="mainfloor" color="#4a2d26" position="0 -1 0" rotation="-90 0 0" scale="15 15 15"></a-plane>
+  <a-plane id="mainfloor" color="#4a2d26" position="0 -1 0" rotation="-90 0 0" scale="10 12 15"></a-plane>
 
-  <a-plane id="stringfloor" color="#4a2d26" position="10 -1 0" rotation="-90 0 0" scale="15 15 15"></a-plane>
+  <a-plane id="stringfloor" color="#4a2d26" position="11.7 -1 0" rotation="-90 0 0" scale="13.5 11 2"></a-plane>
 
-  <a-plane id="brindfloor" color="#4a2d26" position="-10 -1 0" rotation="-90 0 0" scale="15 15 15"></a-plane>
+  <a-plane id="brindfloor" color="#4a2d26" position="-10.301 -1 -1.5" rotation="-90 0 0" scale="10.5 8 2"></a-plane>
 
-  <a-plane id="percussionfloor" color="#4a2d26" position="0 -1 -10" rotation="-90 0 0" scale="15 15 15"></a-plane>
+  <a-plane id="percussionfloor" color="#4a2d26" position="0 -1 -10" rotation="-90 0 0" scale="13.5 11 2"></a-plane>
   
 
   <!--WALLS-->
-  <a-box id="leftwall" color="#b8cbde" scale="0.5 10 15" position="-7.5 0 0"></a-box>
+  <!--MAIN WALL-->
+  <a-box id="leftwall" color="#b8cbde" scale="0.5 10 12" position="-5 0 0"></a-box>
+  <a-box id="rightwall" color="#b8cbde" scale="0.5 10 12" position="5 0 0"></a-box>
+  <a-box id="backwall" color="#b8cbde" scale="0.5 10 10.5" position="0 0 -6" rotation="0 90 0"></a-box>
+  <a-box id="frontwall" color="#b8cbde" scale="0.5 10 10.5" position="0 0 6" rotation="0 90 0"></a-box>
 
-  <a-box id="rightwall" color="#b8cbde" scale="0.5 10 15" position="7.5 0 0"></a-box>
+  <!--STRING WALL-->
+  <a-box id="s_leftwall" color="#b8cbde" scale="0.5 10 13.5" position="12 0 5.5" rotation="0 -90 0"></a-box>
+  <a-box id="s_rightwall" color="#b8cbde" scale="0.5 10 13.5" position="12 0 -5.5" rotation="0 90 0"></a-box>
+  <a-box id="s_backwall" color="#b8cbde" scale="0.5 10 11.5" position="18.5 0 0"></a-box>
 
-  <a-box id="backwall" color="#b8cbde" scale="0.5 10 15" position="0 0 -7.5" rotation="0 90 0"></a-box>
+  <!--BRIND WALL-->
+  <a-box id="b_leftwall" color="#b8cbde" scale="0.5 10 10.6" position="-10.4 0 2.4" rotation="0 90 0"></a-box>
+  <a-box id="b_rightwall" color="#b8cbde" scale="0.5 10 10.6" position="-10.4 0 -5.5" rotation="0 90 0"></a-box>
+  <a-box id="b_backwall" color="#b8cbde" scale="0.5 10 8.3" position="-15.4 0 -1.5"></a-box>
 
-  <a-box id="frontwall" color="#b8cbde" scale="0.5 10 15" position="0 0 7.5" rotation="0 90 0"></a-box>
+  <!--PERCUSSION WALL-->
+  <a-box id="p_leftwall" color="#b8cbde" scale="0.5 10 10" position="-7 0 -10.7"></a-box>
+  <a-box id="p_rightwall" color="#b8cbde" scale="0.5 10 10" position="7 0 -10.7"></a-box>
+  <a-box id="p_backwall" color="#b8cbde" scale="0.5 10 14" position="0 0 -15.5" rotation="0 90 0"></a-box>
 
 
   <!-- 3D MODELS -->
-  <a-entity gltf-model="#bongos" position="0 -1 4" scale='0.25 0.25 0.25'></a-entity>
+  <a-entity gltf-model="#bongos" id="bongos" position="-5 -1 -9" scale='0.25 0.25 0.25' rotation="0 30 0"></a-entity>
 
-  <a-entity gltf-model="#cello" position="-5 1.3 -5" scale='2.25 2.25 2.25' rotation="70 0 0"></a-entity>
+  <a-entity gltf-model="#cello" id="cello" position="16.5 1.3 -1" scale='2.25 2.25 2.25' rotation="70 -90 0"></a-entity>
 
-  <a-entity gltf-model="#drum" position="3 -3.614 -3" scale='0.25 0.25 0.25'></a-entity>
+  <a-entity gltf-model="#drum" id="drums" position="2 -3.614 -11.5" scale='0.25 0.25 0.25' rotation="0 -30 0"></a-entity>
 
-  <a-entity gltf-model="#flute" position="-2 0.109 -2" scale='0.25 0.25 0.25' rotation="0 45 45"></a-entity>
+  <a-entity gltf-model="#flute" id="flute" position="-13.7 0.109 -3.2" scale='0.25 0.25 0.25' rotation="0 45 45"></a-entity>
 
-  <a-entity gltf-model="#guitar" position="-4.5 -0.963 -5" scale='0.3 0.3 0.3'></a-entity>
+  <a-entity gltf-model="#guitar" id="guitar" position="14.3 -0.963 -3.5" scale='0.3 0.3 0.3' rotation="0 -15 0"></a-entity>
 
-  <a-entity gltf-model="#piano" position="-6 -0.830 1.5" scale='3 3 3'></a-entity>
+  <a-entity gltf-model="#piano" id="piano" position="14 -0.830 4.2" scale='3 3 3' rotation="0 90 0"></a-entity>
 
-  <a-entity gltf-model="#sax" position="-4 1.5 -5" scale='0.01 0.01 0.01'></a-entity>
+  <a-entity gltf-model="#sax" id="saxaphone" position="-12 1.5 0.5" scale='0.01 0.01 0.01'></a-entity>
 
-  <a-entity gltf-model="#trumpet" position="-6 0.5 5" scale='0.1 0.1 0.1'></a-entity>
+  <a-entity gltf-model="#trumpet" id="trumpet" position="-10 0.5 -3.6" scale='0.2 0.2 0.2'></a-entity>
 
-  <a-entity gltf-model="#violin" position="5 -1 -6" scale='0.05 0.05 0.05'></a-entity>
+  <a-entity gltf-model="#violin" id="violin" position="10 -1 -3.6" scale='0.05 0.05 0.05' rotation="0 -30 0"></a-entity>
 
-  <a-entity gltf-model="#xylophone" position="-5 -1 6" scale='0.02 0.02 0.02'></a-entity>
+  <a-entity gltf-model="#xylophone" id="xylophone" position="-4.5 -1 -9" scale='0.02 0.02 0.02'></a-entity>
 
   
 </a-scene>
