--- a/vr.html
+++ b/vr.html
@@ -15,15 +15,21 @@
 	<script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
 
 	<script src="https://rawgit.com/donmccurdy/aframe-extras/v2.1.1/dist/aframe-extras.loaders.min.js"></script>
+
+  <!--Script needed to create the navmesh in the inspector-->
+	<script src="https://recast-api.donmccurdy.com/aframe-inspector-plugin-recast.js" crossorigin="anonymous"></script>
 	
 </head>
 
 <body>
-<a-scene>
+<a-scene physics="gravity: -9.8;restitution: 0.1" inspector-plugin-recast>
 
   <!-- ASSETS +++++++++++++++++++++ -->
 		<a-assets>
-			<a-asset-item id="bongos" src="models/bongos.glb"></a-asset-item>
+
+      <a-asset-item id="myNavMesh" src="navmesh.gltf"></a-asset-item>
+  
+			<!--<a-asset-item id="bongos" src="models/bongos.glb"></a-asset-item>
 
       <a-asset-item id="cello" src="models/cello.glb"></a-asset-item>
 
@@ -37,11 +43,8 @@
 
       <a-asset-item id="sax" src="models/sax.glb"></a-asset-item>
 
-      <a-asset-item id="trumpet" src="models/trumpet.glb"></a-asset-item>
+      <a-asset-item id="trumpet" src="models/trumpet.glb"></a-asset-item>-->
 
-      <a-asset-item id="violin" src="models/violin.glb"></a-asset-item>
-
-      <a-asset-item id="xylophone" src="models/xylophone.glb"></a-asset-item>
     </a-assets>
 
 
@@ -50,16 +53,38 @@
 
   <a-plane id="stringfloor" color="#4a2d26" position="11.7 -1 0" rotation="-90 0 0" scale="13.5 11 2"></a-plane>
 
-  <a-plane id="brindfloor" color="#4a2d26" position="-10.301 -1 -1.5" rotation="-90 0 0" scale="10.5 8 2"></a-plane>
+  <a-plane id="brindfloor" color="#4a2d26" position="-10.301 -1 -1.5" rotation="-90 0 0" scale="10.6 8 2"></a-plane>
 
   <a-plane id="percussionfloor" color="#4a2d26" position="0 -1 -10" rotation="-90 0 0" scale="13.5 11 2"></a-plane>
+
+
+  <!-- CEILINGS -->
+  <a-box id="mainceiling" color="#70442f" position="0 4.75 0" scale="10 0.5 12"></a-box>
+
+  <a-box id="stringceiling" color="#70442f" position="11.8 4.75 0" scale="13.35 0.5 11.12"></a-box>
+
+  <a-box id="brindceiling" color="#70442f" position="-10.301 4.75 -1.5" scale="10.3 0.5 7.7"></a-box>
+
+  <a-box id="percussionceiling" color="#70442f" position="0 4.75 -10.5" scale="14 0.5 9.7"></a-box>
   
 
   <!--WALLS-->
-  <!--MAIN WALL-->
-  <a-box id="leftwall" color="#b8cbde" scale="0.5 10 12" position="-5 0 0"></a-box>
-  <a-box id="rightwall" color="#b8cbde" scale="0.5 10 12" position="5 0 0"></a-box>
-  <a-box id="backwall" color="#b8cbde" scale="0.5 10 10.5" position="0 0 -6" rotation="0 90 0"></a-box>
+  <!--MAIN LEFT WALL-->
+  <a-box id="topleftwall" color="#b8cbde" scale="0.5 1 12" position="-5 4.5 0"></a-box>
+  <a-box id="leftleftwall" color="#b8cbde" scale="0.5 10 4.8" position="-5 0 4"></a-box>
+  <a-box id="rightleftwall" color="#b8cbde" scale="0.5 10 4.3" position="-5 0 -4"></a-box>
+
+  <!--MAIN RIGHT WALL-->
+  <a-box id="toprightwall" color="#b8cbde" scale="0.5 1 12" position="5 4.5 0"></a-box>
+  <a-box id="leftrightwall" color="#b8cbde" scale="0.5 10 4.8" position="5 0 3.5"></a-box>
+  <a-box id="rightrightwall" color="#b8cbde" scale="0.5 10 4.3" position="5 0 -4"></a-box>
+
+  <!--MAIN BACK WALL-->
+  <a-box id="topbackwall" color="#b8cbde" scale="0.5 1 9.7" position="0 4.5 -6" rotation="0 90 0"></a-box>
+  <a-box id="leftbackwall" color="#b8cbde" scale="0.5 6 3.4" position="-3.1 2 -6" rotation="0 90 0"></a-box>
+  <a-box id="rightbackwall" color="#b8cbde" scale="0.5 6 3.3" position="3.1 2 -6" rotation="0 90 0"></a-box>
+
+  
   <a-box id="frontwall" color="#b8cbde" scale="0.5 10 10.5" position="0 0 6" rotation="0 90 0"></a-box>
 
   <!--STRING WALL-->
@@ -81,13 +106,13 @@
   <!-- 3D MODELS -->
   <a-entity gltf-model="#bongos" id="bongos" position="-5 -1 -9" scale='0.25 0.25 0.25' rotation="0 30 0"></a-entity>
 
-  <a-entity gltf-model="#cello" id="cello" position="16.5 1.3 -1" scale='2.25 2.25 2.25' rotation="70 -90 0"></a-entity>
+  <a-entity gltf-model="#cello" id="cello" position="15.5 1.3 -1" scale='2.25 2.25 2.25' rotation="70 -90 0"></a-entity>
 
   <a-entity gltf-model="#drum" id="drums" position="2 -3.614 -11.5" scale='0.25 0.25 0.25' rotation="0 -30 0"></a-entity>
 
   <a-entity gltf-model="#flute" id="flute" position="-13.7 0.109 -3.2" scale='0.25 0.25 0.25' rotation="0 45 45"></a-entity>
 
-  <a-entity gltf-model="#guitar" id="guitar" position="14.3 -0.963 -3.5" scale='0.3 0.3 0.3' rotation="0 -15 0"></a-entity>
+  <a-entity gltf-model="#guitar" id="guitar" position="11.6 -0.963 -3.5" scale='0.3 0.3 0.3' rotation="0 -15 0"></a-entity>
 
   <a-entity gltf-model="#piano" id="piano" position="14 -0.830 4.2" scale='3 3 3' rotation="0 90 0"></a-entity>
 
@@ -95,9 +120,16 @@
 
   <a-entity gltf-model="#trumpet" id="trumpet" position="-10 0.5 -3.6" scale='0.2 0.2 0.2'></a-entity>
 
-  <a-entity gltf-model="#violin" id="violin" position="10 -1 -3.6" scale='0.05 0.05 0.05' rotation="0 -30 0"></a-entity>
 
-  <a-entity gltf-model="#xylophone" id="xylophone" position="-4.5 -1 -9" scale='0.02 0.02 0.02'></a-entity>
+  
+  <!--NAVMESH
+		<a-gltf-model src="#myNavMesh" nav-mesh position="0 0.5 0" visible="false"></a-gltf-model>
+
+  <!--CAMERA
+		<a-entity id="rig" position="-2.9 0.1 2.2" movement-controls="constrainToNavMesh: true; speed: 0.5;">
+			<a-entity camera id="camera" position="0 1.6 0" look-controls="pointerLockEnabled:false" extended-wasd-controls="flyEnabled: true; turnEnabled: true; lookEnabled: true; maxLookAngle: 60;">
+			</a-entity>
+		</a-entity>-->
 
   
 </a-scene>
