--- a/vr.html
+++ b/vr.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>ADD TITLE</title>
+  <title>VR MUSIC ROOM</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
@@ -28,8 +28,8 @@
 		<a-assets>
 
       <a-asset-item id="myNavMesh" src="navmesh.gltf"></a-asset-item>
-  
-			<!--<a-asset-item id="bongos" src="models/bongos.glb"></a-asset-item>
+
+      <a-asset-item id="banjo" src="models/banjo.glb"></a-asset-item>
 
       <a-asset-item id="cello" src="models/cello.glb"></a-asset-item>
 
@@ -43,93 +43,94 @@
 
       <a-asset-item id="sax" src="models/sax.glb"></a-asset-item>
 
-      <a-asset-item id="trumpet" src="models/trumpet.glb"></a-asset-item>-->
+      <a-asset-item id="trumpet" src="models/trumpet.glb"></a-asset-item>
 
     </a-assets>
 
 
   <!-- FLOOR -->
-  <a-plane id="mainfloor" color="#4a2d26" position="0 -1 0" rotation="-90 0 0" scale="10 12 15"></a-plane>
+  <a-plane id="mainfloor" src="textures/floor.png" position="0 -1 0" rotation="-90 0 0" scale="10 12 15"></a-plane>
 
-  <a-plane id="stringfloor" color="#4a2d26" position="11.7 -1 0" rotation="-90 0 0" scale="13.5 11 2"></a-plane>
+  <a-plane id="stringfloor" src="textures/floor.png" position="11 -1 -1.2" rotation="-90 0 0" scale="12.2 8.6 2"></a-plane>
 
-  <a-plane id="brindfloor" color="#4a2d26" position="-10.301 -1 -1.5" rotation="-90 0 0" scale="10.6 8 2"></a-plane>
+  <a-plane id="brindfloor" src="textures/floor.png" position="-10.301 -1 -1.5" rotation="-90 0 0" scale="10.6 8 2"></a-plane>
 
-  <a-plane id="percussionfloor" color="#4a2d26" position="0 -1 -10" rotation="-90 0 0" scale="13.5 11 2"></a-plane>
+  <a-plane id="percussionfloor" src="textures/floor.png" position="0 -1 -10" rotation="-90 0 0" scale="13.5 11 2"></a-plane>
 
 
   <!-- CEILINGS -->
-  <a-box id="mainceiling" color="#70442f" position="0 4.75 0" scale="10 0.5 12"></a-box>
+  <a-box id="mainceiling" color="#e3cabf" position="0 4.75 0" scale="10 0.5 12"></a-box>
 
-  <a-box id="stringceiling" color="#70442f" position="11.8 4.75 0" scale="13.35 0.5 11.12"></a-box>
+  <a-box id="stringceiling" color="#e3cabf" position="11.8 4.75 0" scale="13.35 0.5 11.12"></a-box>
 
-  <a-box id="brindceiling" color="#70442f" position="-10.301 4.75 -1.5" scale="10.3 0.5 7.7"></a-box>
+  <a-box id="brindceiling" color="#e3cabf" position="-10.301 4.75 -1.5" scale="10.3 0.5 7.7"></a-box>
 
-  <a-box id="percussionceiling" color="#70442f" position="0 4.75 -10.5" scale="14 0.5 9.7"></a-box>
+  <a-box id="percussionceiling" color="#e3cabf" position="0 4.75 -10.5" scale="14 0.5 9.7"></a-box>
+
   
-
   <!--WALLS-->
   <!--MAIN LEFT WALL-->
-  <a-box id="topleftwall" color="#b8cbde" scale="0.5 1 12" position="-5 4.5 0"></a-box>
-  <a-box id="leftleftwall" color="#b8cbde" scale="0.5 10 4.8" position="-5 0 4"></a-box>
-  <a-box id="rightleftwall" color="#b8cbde" scale="0.5 10 4.3" position="-5 0 -4"></a-box>
+  <a-box id="topleftwall" color="#edf1f2" scale="0.5 1 12" position="-5 4.5 0"></a-box>
+  <a-box id="leftleftwall" color="#edf1f2" scale="0.5 10 4.8" position="-5 0 4"></a-box>
+  <a-box id="rightleftwall" color="#edf1f2" scale="0.5 10 4.3" position="-5 0 -4"></a-box>
 
   <!--MAIN RIGHT WALL-->
-  <a-box id="toprightwall" color="#b8cbde" scale="0.5 1 12" position="5 4.5 0"></a-box>
-  <a-box id="leftrightwall" color="#b8cbde" scale="0.5 10 4.8" position="5 0 3.5"></a-box>
-  <a-box id="rightrightwall" color="#b8cbde" scale="0.5 10 4.3" position="5 0 -4"></a-box>
+  <a-box id="toprightwall" color="#edf1f2" scale="0.5 1 12" position="5 4.5 0"></a-box>
+  <a-box id="leftrightwall" color="#edf1f2" scale="0.5 10 4.8" position="5 0 3.5"></a-box>
+  <a-box id="rightrightwall" color="#edf1f2" scale="0.5 10 4.3" position="5 0 -4"></a-box>
 
   <!--MAIN BACK WALL-->
-  <a-box id="topbackwall" color="#b8cbde" scale="0.5 1 9.7" position="0 4.5 -6" rotation="0 90 0"></a-box>
-  <a-box id="leftbackwall" color="#b8cbde" scale="0.5 6 3.4" position="-3.1 2 -6" rotation="0 90 0"></a-box>
-  <a-box id="rightbackwall" color="#b8cbde" scale="0.5 6 3.3" position="3.1 2 -6" rotation="0 90 0"></a-box>
+  <a-box id="topbackwall" color="#edf1f2" scale="0.5 1 9.7" position="0 4.5 -6" rotation="0 90 0"></a-box>
+  <a-box id="leftbackwall" color="#edf1f2" scale="0.5 6 3.4" position="-3.1 2 -6" rotation="0 90 0"></a-box>
+  <a-box id="rightbackwall" color="#edf1f2" scale="0.5 6 3.3" position="3.1 2 -6" rotation="0 90 0"></a-box>
 
   
-  <a-box id="frontwall" color="#b8cbde" scale="0.5 10 10.5" position="0 0 6" rotation="0 90 0"></a-box>
+  <a-box id="frontwall" color="#edf1f2" scale="0.5 10 10.5" position="0 0 6" rotation="0 90 0"></a-box>
 
   <!--STRING WALL-->
-  <a-box id="s_leftwall" color="#b8cbde" scale="0.5 10 13.5" position="12 0 5.5" rotation="0 -90 0"></a-box>
-  <a-box id="s_rightwall" color="#b8cbde" scale="0.5 10 13.5" position="12 0 -5.5" rotation="0 90 0"></a-box>
-  <a-box id="s_backwall" color="#b8cbde" scale="0.5 10 11.5" position="18.5 0 0"></a-box>
+  <a-box id="s_leftwall" color="#edf1f2" scale="0.5 10 12.5" position="11 0 3" rotation="0 -90 0"></a-box>
+  <a-box id="s_rightwall" color="#edf1f2" scale="0.5 10 12.5" position="11 0 -5.5" rotation="0 90 0"></a-box>
+  <a-box id="s_backwall" color="#edf1f2" scale="0.5 10 9" position="17.3 0 -1.2"></a-box>
 
   <!--BRIND WALL-->
-  <a-box id="b_leftwall" color="#b8cbde" scale="0.5 10 10.6" position="-10.4 0 2.4" rotation="0 90 0"></a-box>
-  <a-box id="b_rightwall" color="#b8cbde" scale="0.5 10 10.6" position="-10.4 0 -5.5" rotation="0 90 0"></a-box>
-  <a-box id="b_backwall" color="#b8cbde" scale="0.5 10 8.3" position="-15.4 0 -1.5"></a-box>
+  <a-box id="b_leftwall" color="#edf1f2" scale="0.5 10 10.6" position="-10.4 0 2.4" rotation="0 90 0"></a-box>
+  <a-box id="b_rightwall" color="#edf1f2" scale="0.5 10 10.6" position="-10.4 0 -5.5" rotation="0 90 0"></a-box>
+  <a-box id="b_backwall" color="#edf1f2" scale="0.5 10 8.3" position="-15.4 0 -1.5"></a-box>
 
   <!--PERCUSSION WALL-->
-  <a-box id="p_leftwall" color="#b8cbde" scale="0.5 10 10" position="-7 0 -10.7"></a-box>
-  <a-box id="p_rightwall" color="#b8cbde" scale="0.5 10 10" position="7 0 -10.7"></a-box>
-  <a-box id="p_backwall" color="#b8cbde" scale="0.5 10 14" position="0 0 -15.5" rotation="0 90 0"></a-box>
+  <a-box id="p_leftwall" color="#edf1f2" scale="0.5 10 10" position="-7 0 -10.7"></a-box>
+  <a-box id="p_rightwall" color="#edf1f2" scale="0.5 10 10" position="7 0 -10.7"></a-box>
+  <a-box id="p_backwall" color="#edf1f2" scale="0.5 10 14" position="0 0 -15.5" rotation="0 90 0"></a-box>
 
 
   <!-- 3D MODELS -->
-  <a-entity gltf-model="#bongos" id="bongos" position="-5 -1 -9" scale='0.25 0.25 0.25' rotation="0 30 0"></a-entity>
 
-  <a-entity gltf-model="#cello" id="cello" position="15.5 1.3 -1" scale='2.25 2.25 2.25' rotation="70 -90 0"></a-entity>
+  <a-entity gltf-model="#banjo" id="banjo" position="12.2 -1 1.5" scale="0.02 0.02 0.02" rotation="0 -30 0"></a-entity>
 
-  <a-entity gltf-model="#drum" id="drums" position="2 -3.614 -11.5" scale='0.25 0.25 0.25' rotation="0 -30 0"></a-entity>
+  <a-entity gltf-model="#cello" id="cello" position="15 1.3 -1" scale='2.25 2.25 2.25' rotation="70 -90 0"></a-entity>
+
+  <a-entity gltf-model="#drum" id="drums" position="2 -3.614 -11.5" scale='0.25 0.25 0.25' rotation="0 -90 0"></a-entity>
 
   <a-entity gltf-model="#flute" id="flute" position="-13.7 0.109 -3.2" scale='0.25 0.25 0.25' rotation="0 45 45"></a-entity>
 
   <a-entity gltf-model="#guitar" id="guitar" position="11.6 -0.963 -3.5" scale='0.3 0.3 0.3' rotation="0 -15 0"></a-entity>
 
-  <a-entity gltf-model="#piano" id="piano" position="14 -0.830 4.2" scale='3 3 3' rotation="0 90 0"></a-entity>
+  <a-entity gltf-model="#piano" id="piano" position="-3.8 -0.830 -14.2" scale='3 3 3' rotation="0 -90 0"></a-entity>
 
   <a-entity gltf-model="#sax" id="saxaphone" position="-12 1.5 0.5" scale='0.01 0.01 0.01'></a-entity>
 
-  <a-entity gltf-model="#trumpet" id="trumpet" position="-10 0.5 -3.6" scale='0.2 0.2 0.2'></a-entity>
+  <a-entity gltf-model="#trumpet" id="trumpet" position="-10 -0.5 -3.6" scale='0.2 0.2 0.2'></a-entity>
 
 
   
-  <!--NAVMESH
+  <!--NAVMESH-->
 		<a-gltf-model src="#myNavMesh" nav-mesh position="0 0.5 0" visible="false"></a-gltf-model>
 
-  <!--CAMERA
+  <!--CAMERA--> 
 		<a-entity id="rig" position="-2.9 0.1 2.2" movement-controls="constrainToNavMesh: true; speed: 0.5;">
 			<a-entity camera id="camera" position="0 1.6 0" look-controls="pointerLockEnabled:false" extended-wasd-controls="flyEnabled: true; turnEnabled: true; lookEnabled: true; maxLookAngle: 60;">
 			</a-entity>
-		</a-entity>-->
+		</a-entity>
 
   
 </a-scene>
