--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </header> 
 
     <nav class="w3-col l4 m4 s4 w3-center">
-      <button onclick="window.location.href = 'vr.html'" class="enter w3-round"> <h2 class="center">Enter VR <br> World</h2> </button>
+      <button onclick="window.location.href = 'vr.html'" class="enter w3-round w3-hover-gray"> <h2 class="center w3-hover-text-black">Enter VR <br> World</h2> </button>
     
-      <button onclick="window.location.href = 'instructions.html'" class="infobtn w3-round"> <h2 class="center">Instructions</h2> </button>
+      <button onclick="window.location.href = 'instructions.html'" class="infobtn w3-round w3-hover-gray"> <h2 class="center w3-hover-text-black">Instructions</h2> </button>
     </nav>
   </div>
 
@@ -44,6 +44,16 @@
       <img class="drums_img" src="/images/drums.png" alt="drums">
     </div>
   </section>
+
+
+  <footer class="footer w3-container w3-margin w3-border w3-border-black">
+    <div class="w3-row">
+      <h3 class="w3-col l6 m6 s12">Made By: Arya Ubale 2023</h3>
+      <h3 class="w3-col l6 m6 s12 w3-right-align">
+        <a href="https://docs.google.com/document/d/1DriRsPtuzE5M11CZ5HGr7uhwPymyL0PDbHQkIeF3bDc/edit">Credits</a>
+      </h3>
+    </div>
+  </footer>
 
 
   
