--- a/instructions.html
+++ b/instructions.html
@@ -25,7 +25,7 @@
     </header> 
 
     <nav class="w3-col l4 m4 s4 w3-center">
-      <button onclick="window.location.href = 'vr.html'" class="enter w3-round"> <h2 class="center">Enter VR <br> World</h2> </button>
+      <button onclick="window.location.href = 'vr.html'" class="enter w3-round w3-hover-gray"> <h2 class="center w3-hover-text-black">Enter VR <br> World</h2> </button>
     </nav>
   </div>
 
@@ -47,6 +47,11 @@
       <h2>Click on an instrument of your choice to see more information about it!</h2>
     </div>
   </section>
+
+
+  <footer class="footer w3-container w3-margin w3-border w3-border-black">
+    <h3>Made By: Arya Ubale 2023</h3>
+  </footer>
 
   
 </body>
