--- a/vr.html
+++ b/vr.html
@@ -18,11 +18,14 @@
 
   <!--Script needed to create the navmesh in the inspector-->
 	<script src="https://recast-api.donmccurdy.com/aframe-inspector-plugin-recast.js" crossorigin="anonymous"></script>
+
+  <!--Java Script Files-->
+  <script src="script.js"></script>
 	
 </head>
 
 <body>
-<a-scene physics="gravity: -9.8;restitution: 0.1" inspector-plugin-recast>
+<a-scene cursor="rayOrigin: mouse" physics="gravity: -9.8;restitution: 0.1" inspector-plugin-recast>
 
   <!-- ASSETS +++++++++++++++++++++ -->
 		<a-assets>
@@ -105,21 +108,37 @@
 
   <!-- 3D MODELS -->
 
-  <a-entity gltf-model="#banjo" id="banjo" position="12.2 -1 1.5" scale="0.02 0.02 0.02" rotation="0 -30 0"></a-entity>
+  <a-entity gltf-model="#banjo" id="banjo" onclick='banjoPopup()' position="12.2 -1 1.5" scale="0.02 0.02 0.02" rotation="0 -30 0"></a-entity>
+  <!--Plane acting as pop-up-->
+  <a-plane id="banjoPop" visible="false" position="12.240 2.139 2.749" rotation="0 180 0" src="popups/Banjo.png" scale="5 3 1"></a-plane>
 
-  <a-entity gltf-model="#cello" id="cello" position="15 1.3 -1" scale='2.25 2.25 2.25' rotation="70 -90 0"></a-entity>
+  <a-entity gltf-model="#cello" id="cello" onclick='celloPopup()' position="15 1.3 -1" scale='2.25 2.25 2.25' rotation="70 -90 0"></a-entity>
+  <!--Plane acting as pop-up-->
+  <a-plane id="celloPop" visible="false" position="17 2 -2.5" rotation="0 -90 0" src="popups/Cello.png" scale="5 3 1"></a-plane>
 
-  <a-entity gltf-model="#drum" id="drums" position="2 -3.614 -11.5" scale='0.25 0.25 0.25' rotation="0 -90 0"></a-entity>
+  <a-entity gltf-model="#drum" id="drums" onclick='drumsPopup()' position="2 -3.614 -11.5" scale='0.25 0.25 0.25' rotation="0 -90 0"></a-entity>
+  <!--Plane acting as pop-up-->
+  <a-plane id="drumsPop" visible="false" position="1.8 2 -15.1" rotation="0 0 0" src="popups/Drums.png" scale="5 3 1"></a-plane>
 
-  <a-entity gltf-model="#flute" id="flute" position="-13.7 0.109 -3.2" scale='0.25 0.25 0.25' rotation="0 45 45"></a-entity>
+  <a-entity gltf-model="#flute" id="flute" onclick='flutePopup()' position="-13.7 0.109 -3.2" scale='0.25 0.25 0.25' rotation="0 45 45"></a-entity>
+  <!--Plane acting as pop-up-->
+  <a-plane id="flutePop" visible="false" position="-15 2 -2" rotation="0 90 0" src="popups/Flute.png" scale="5 3 1"></a-plane>
 
-  <a-entity gltf-model="#guitar" id="guitar" position="11.6 -0.963 -3.5" scale='0.3 0.3 0.3' rotation="0 -15 0"></a-entity>
+  <a-entity gltf-model="#guitar" id="guitar" onclick='guitarPopup()' position="11.6 -0.963 -3.5" scale='0.005 0.005 0.005' rotation="0 -15 0"></a-entity>
+  <!--Plane acting as pop-up-->
+  <a-plane id="guitarPop" visible="false" position="11.75 2 -5.227" rotation="0 0 0" src="popups/Guitar.png" scale="5 3 1"></a-plane>
 
-  <a-entity gltf-model="#piano" id="piano" position="-3.8 -0.830 -14.2" scale='3 3 3' rotation="0 -90 0"></a-entity>
+  <a-entity gltf-model="#piano" id="piano" onclick='pianoPopup()' position="-3.8 -0.830 -14.2" scale='3 3 3' rotation="0 -90 0"></a-entity>
+  <!--Plane acting as pop-up-->
+  <a-plane id="pianoPop" visible="false" position="-6.71 2 -10.5" rotation="0 90 0" src="popups/Piano.png" scale="5 3 1"></a-plane>
 
-  <a-entity gltf-model="#sax" id="saxaphone" position="-12 1.5 0.5" scale='0.01 0.01 0.01'></a-entity>
+  <a-entity gltf-model="#sax" id="saxaphone" onclick='saxPopup()' position="-10.8 0.8 -1" scale='0.03 0.03 0.03'></a-entity>
+  <!--Plane acting as pop-up-->
+  <a-plane id="saxPop" visible="false" position="-11.060 2 2.130" rotation="0 180 0" src="popups/Saxophone.png" scale="5 3 1"></a-plane>
 
-  <a-entity gltf-model="#trumpet" id="trumpet" position="-10 -0.5 -3.6" scale='0.2 0.2 0.2'></a-entity>
+  <a-entity gltf-model="#trumpet" id="trumpet" onclick='trumpetPopup()' position="-10 -0.5 -3.6" scale='0.2 0.2 0.2'></a-entity>
+  <!--Plane acting as pop-up-->
+  <a-plane id="trumpetPop" visible="false" position="-12 2 -5.2" rotation="0 0 0" src="popups/Trumpet.png" scale="5 3 1"></a-plane>
 
 
   
