--- a/index.html
+++ b/index.html
@@ -12,21 +12,25 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
+
+  <!--W3 COLOUR-->
+  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-2017.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-2019.css">
 	
 </head>
 
 <body>
 
-  <div class="w3-container w3-row w3-margin w3-padding-64 w3-border w3-border-black header">
-    <header class="w3-col l7 m7 s7 w3-margin">
+  <div class="w3-container w3-row w3-margin w3-padding-64 w3-border w3-border-black w3-2017-ballet-slipper header">
+    <header class="w3-col l7 m7 s7 w3-margin w3-text-brown">
       <h1>The Music Room</h1>
       <h2>Experience an Immersive Music <br> Room to be Blown Away</h2>
     </header> 
 
     <nav class="w3-col l4 m4 s4 w3-center">
-      <button onclick="window.location.href = 'vr.html'" class="enter w3-round w3-hover-gray"> <h2 class="center w3-hover-text-black">Enter VR <br> World</h2> </button>
+      <button onclick="window.location.href = 'vr.html'" class="enter w3-round w3-2019-toffee w3-hover-gray"> <h2 class="center w3-text-pink w3-hover-text-black">Enter VR <br> World</h2> </button>
     
-      <button onclick="window.location.href = 'instructions.html'" class="infobtn w3-round w3-hover-gray"> <h2 class="center w3-hover-text-black">Instructions</h2> </button>
+      <button onclick="window.location.href = 'instructions.html'" class="infobtn w3-round w3-2019-toffee w3-hover-gray"> <h2 class="center w3-hover-text-black">Instructions</h2> </button>
     </nav>
   </div>
 
@@ -46,11 +50,11 @@
   </section>
 
 
-  <footer class="footer w3-container w3-margin w3-border w3-border-black">
+  <footer class="footer w3-container w3-margin w3-border w3-border-black w3-2017-ballet-slipper w3-text-brown">
     <div class="w3-row">
       <h3 class="w3-col l6 m6 s12">Made By: Arya Ubale 2023</h3>
       <h3 class="w3-col l6 m6 s12 w3-right-align">
-        <a href="https://docs.google.com/document/d/1DriRsPtuzE5M11CZ5HGr7uhwPymyL0PDbHQkIeF3bDc/edit">Credits</a>
+        <a href="https://docs.google.com/document/d/e/2PACX-1vQa3WkS3TKWQdmhiP-fEdRu-AXXdAsPkGu3Nh_zVvNKk4gpd-QZQTQ4IPlnsKvIPhcwAwNHC3l9vs9M/pub">Credits</a>
       </h3>
     </div>
   </footer>
