--- a/instructions.html
+++ b/instructions.html
@@ -50,7 +50,12 @@
 
 
   <footer class="footer w3-container w3-margin w3-border w3-border-black">
-    <h3>Made By: Arya Ubale 2023</h3>
+    <div class="w3-row">
+      <h3 class="w3-col l6 m6 s12">Made By: Arya Ubale 2023</h3>
+      <h3 class="w3-col l6 m6 s12 w3-right-align">
+        <a href="https://docs.google.com/document/d/e/2PACX-1vQa3WkS3TKWQdmhiP-fEdRu-AXXdAsPkGu3Nh_zVvNKk4gpd-QZQTQ4IPlnsKvIPhcwAwNHC3l9vs9M/pub">Credits</a>
+      </h3>
+    </div>
   </footer>
 
   
